# SymEigen

./: .gitignore  QuickStart.ipynb  README.md  SymEigen.py  Vectorize.ipynb  __init__.py  pyproject.toml
test/: issue1.ipynb  issue2.ipynb
